Fixed spacing around pre tags

--- a/styles.less
+++ b/styles.less
@@ -31,6 +31,8 @@
 
 .slide pre {
     border: 0;
+    margin-top: 0;
+    padding-top: 0;
 }
 
 .slide ul,
